Sun Jun 24 02:00:07 BST 2007  Olly Betts <olly@survex.com>

	* docs/synonyms.rst,docs/Makefile.am: New "topic" document describing
	  synonym support.
	* docs/Makefile.am: HTML documentation generated from RST files wasn't
	  being installed.

Sun Jun 24 00:45:46 BST 2007  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,common/remote-database.h,
	  common/remoteprotocol.h,common/submatch.h,docs/remote_protocol.html,
	  matcher/,net/remoteserver.cc: Pass check_at_least to the remote
	  server to reduce the amount of work required to produce the match
	  on the remote server, and also reduce the serialised size of the
	  returned MSet.

Sun Jun 24 00:17:18 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: More check_at_least tests.

Sat Jun 23 20:02:48 BST 2007  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,tests/api_wrdb.cc: Add multi-database support
	  for synonyms.

Sat Jun 23 18:50:59 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/database.h: Tiny fix to a documentation comment.

Sat Jun 23 17:35:37 BST 2007  Olly Betts <olly@survex.com>

	* common/ortermlist.h,expand/ortermlist.cc: Comment out unused method
	  OrTermList::get_collection_freq().  The same dummy implementation
	  is provided by the parent class (TermList).

Sat Jun 23 17:07:40 BST 2007  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/database.cc,backends/flint/,
	  common/database.h,include/xapian/database.h,tests/api_wrdb.cc:
	  Implement Database::synonym_keys_begin() to allow iteration over all
	  the terms for which synonyms have been added.

Sat Jun 23 04:19:54 BST 2007  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix handling of check_at_least parameter -
	  we weren't discarding matches above the requested MSet size
	  correctly.
	* tests/api_anydb.cc: Add regression test checkatleast2.

Sat Jun 23 03:00:45 BST 2007  Olly Betts <olly@survex.com>

	* docs/queryparser.html: Document synonyms.
