@@ -1,3 +1,10 @@
+Sun Jun 24 02:25:38 BST 2007  Olly Betts <olly@survex.com>
+
+	* matcher/multimatch.cc: The check_at_least parameter to
+	  Enquire::get_mset() is now handled in a more efficient way - no
+	  extra memory is now required, and CPU overhead should be reduced
+	  (bug#174).
+
 Sun Jun 24 02:00:07 BST 2007  Olly Betts <olly@survex.com>
 
 	* docs/synonyms.rst,docs/Makefile.am: New "topic" document describing
